Added loader. Changed error message implementation.

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,26 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="overlay">
+      <div class="valign-wrapper center-align loader-wrapper">
+        <div class="preloader-wrapper big active">
+          <div class="spinner-layer spinner-red-only">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+              <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+              <div class="circle"></div>
+            </div>
+          </div>
+        </div>
+        <h5>Getting the application set up!</h5>
+      </div>
+    </div>
+  </app-root>
 </body>
 
 </html>
